[metadata]
name = viper2
version = attr: viper.common.version.VIPER_VERSION
author = Claudio Guarnieri
author_email = nex@nex.sx
description = Viper Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viper-framework/viper2
keywords = security, binary, malware
license = BSD 3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = ./
include_package_data = True
python_requires = >= 3.6
install_requires =
    prompt-toolkit >=3.0.38
    rich >=13.3.5
    python-magic >=0.4.27

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    viper = viper.ui:main

[flake8]
max-complexity = 10
max-line-length = 1000
ignore =
    C901,
    E265,
    F401,
    E127,
    W503,
    E226

[pylint]
score = no
reports = no
output-format = colorized

max-locals = 25
max-args = 10

min-similarity-lines = 10
ignore-comments = yes
ignore-docstrings = yes
ignore-imports = yes

ignored-argument-names=args|kwargs

# https://pylint.pycqa.org/en/stable/technical_reference/features.html
disable =
    #logging-fstring-interpolation,
    missing-docstring,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
